Bug 1939619 - Add comment class at comment start unconditionally. r=hsivonen

The regressing bug splits the span per line, so if there's no data state
within the comment, then we'd only add the class to the last comment
line.

Differential Revision: https://phabricator.services.mozilla.com/D233164